Get jcip to work